@@ -6,3 +6,4 @@ requires 'RDF::Trine';
 requires 'HTTP::Date';
 
 test_requires 'HTTP::Request::Common';
+test_requires 'Unicode::Normalize';
